dist/LineScript-win64-20260616/tests/cases/compile_fail/superuser_not_privileged.lsc
declare caps = su.capabilities()
println(caps)
